# digital_tracker_analytics_agent

./: .env.example  .gitignore  DT_Reporting_Agent_PRD_v1.md  DT_Reporting_Agent_Wireframes.md  DT_Tech_Onboarding_Presentation.md  PRD_Auto_Email_Forwarding.md  SETUP.md  ad_server_domains_classified.md  clone_repos.bat  clone_repos.sh  config.py  dtsa_database.py  filesystem_service.py  github_service.py  mcp_server.py  mysql_service.py  phabricator_service.py  playwright_service.py  pyproject.toml  requirements.txt
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
memory/: MEMORY.md  feedback_dtaa_tool_namespace.md  feedback_email_sov_formula.md  feedback_inline_literals_regexp.md  feedback_web_soa_no_weight_table.md  project_dt_reporting_agent.md  project_report_automation.md
scripts/classify_ad_domains/: README.md  categorize.py  classify_ad_domains.py  config.json
scripts/classify_ad_domains/state/: batch1_results.json  batch2.json  batch2_results.json  batch3.json  (+8 more)
skills/dtaa/: SKILL.md
skills/dtaa-ads/: SKILL.md
skills/dtaa-ads-metrics/: SKILL.md
skills/dtaa-emails/: SKILL.md
skills/dtaa-emails-metrics/: SKILL.md
skills/dtaa-posts/: SKILL.md
skills/dtaa-posts-metrics/: SKILL.md
skills/dtaa-search/: SKILL.md
skills/dtaa-search-metrics/: SKILL.md
skills/dtaa-web/: SKILL.md
skills/dtaa-web-metrics/: SKILL.md
skills/dtsa/: SKILL.md
skills/dtsa-database/: SKILL.md
skills/dtsa-diagnostics/: SKILL.md
skills/dtsa-selectors/: SKILL.md
skills/dtsa-ticketing/: SKILL.md
(+14 files in other folders)
